# Spartan2

./: .gitmodules  Cargo.toml
examples/: RUNBOOK.md  freivalds_conv_neutronnova.rs  neutron_nova_streaming_sha256_example.rs  neutron_nova_streaming_video_editing.rs  neutron_nova_video_editing.rs  sha256.rs  spartan_editing_experiment.rs
examples/circuits/: dummy_circuit.rs  freivalds_conv_circuit.rs  sha256_circuit.rs
scribe-system/: .gitignore  CITATION.cff  Cargo.toml  README.md  aws.sh  server-setup.sh
scribe-system/.github/workflows/: ci.yml
scribe-system/bench-utils/: Cargo.toml
scribe-system/bench-utils/examples/: README.md  bench_sparrow_sumcheck.sh  build_sparrow.sh  gemini-prover.rs  halo2-prover.rs  hp-prover.rs  hp-setup.rs  plonky2-prover.rs  plot_grid.py  prover-benches.py  scribe-prover.rs  scribe-setup.rs  sumcheck.rs  synthesis-benches.py  witness-synth.rs
scribe-system/bench-utils/src/: gemini.rs  halo2.rs  hp.rs  lib.rs  plonky2.rs  scribe.rs
scribe-system/constraints/relation/: Cargo.toml
scribe-system/constraints/relation/src/: constants.rs  constraint_system.rs  lib.rs
scribe-system/constraints/relation/src/gadgets/: arithmetic.rs  cmp.rs  logic.rs  mod.rs  range.rs
scribe-system/constraints/relation/src/gadgets/ecc/: conversion.rs  mod.rs
scribe-system/constraints/relation/src/gates/: mod.rs
scribe-system/mle/: Cargo.toml
scribe-system/mle/benches/: mle.rs
scribe-system/mle/src/: eq_iter.rs  errors.rs  inner.rs  lexico_iter.rs  lib.rs  mle.rs  small_mle.rs  util.rs  virtual_mle.rs  virtual_polynomial.rs
scribe-system/mobile-scribe/: FfiBenchUtils.h
scribe-system/mobile-scribe/mobile-scribe/: ScribeApp.swift
scribe-system/mobile-scribe/mobile-scribe.xcodeproj/: project.pbxproj
scribe-system/mobile-scribe/mobile-scribe.xcodeproj/xcshareddata/xcschemes/: mobile-scribe.xcscheme
scribe-system/scribe-snark/: Cargo.toml
scribe-system/scribe-snark/benches/: sumcheck.rs
scribe-system/scribe-snark/src/: lib.rs
scribe-system/scribe-snark/src/pc/: errors.rs  mod.rs  structs.rs
scribe-system/scribe-snark/src/pc/pst13/: batching.rs  mod.rs  srs.rs  util.rs
scribe-system/scribe-snark/src/piop/: errors.rs  mod.rs  prelude.rs  structs.rs
scribe-system/scribe-snark/src/piop/perm_check/: mod.rs  util.rs
scribe-system/scribe-snark/src/piop/prod_check/: mod.rs  util.rs
scribe-system/scribe-snark/src/piop/sum_check/: mod.rs  prover.rs  verifier.rs
scribe-system/scribe-snark/src/piop/zero_check/: mod.rs
scribe-system/scribe-snark/src/snark/: custom_gate.rs  errors.rs  mock.rs  mod.rs  prelude.rs  selectors.rs  snark.rs  structs.rs  utils.rs  witness.rs
scribe-system/scribe-snark/src/transcript/: errors.rs  mod.rs
scribe-system/streams/: Cargo.toml
scribe-system/streams/benches/: file_vec.rs  iter.rs  serialize.rs
scribe-system/streams/src/: file_vec.rs  iterator.rs  lib.rs  serialize.rs
scribe-system/streams/src/file_vec/: array_chunks.rs  backend.rs  double_buffered.rs  iter.rs  iter_chunk_mapped.rs  iter_with_buf.rs  macros.rs  test.rs
scribe-system/streams/src/iterator/: array_chunks.rs  batched_map.rs  chain_many.rs  flat_map.rs  from_fn.rs  map.rs  repeat.rs  take.rs  zip.rs  zip_many.rs  zip_with_buf.rs
src/: lib.rs  neutronnova_zk_streaming.rs
src/provider/: pt256.rs
src/r1cs/: mod.rs  sparse.rs
