[workspace]
members = [
    "bench-utils",
    "scribe-snark",
    "streams", 
    "mle",
    "constraints/relation",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [ "scribe authors" ]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
ark-ec = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.5.0", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-poly = { version = "0.5.0", default-features = false, features = ["parallel"] }
ark-serialize = {version = "0.5.0", features = ["derive", "std"]}
ark-crypto-primitives = { version = "0.5.0", default-features = false, features = ["sponge"] }

ark-ed-on-bls12-377 = "0.5.0"
ark-bls12-377 = "0.5.0"
ark-bls12-381 = {version = "0.5.0", default-features = false, features = ["curve"] }
ark-ed-on-bls12-381 = "0.5.0"
ark-ed-on-bls12-381-bandersnatch = "0.5.0"
ark-ed-on-bn254 = "0.5.0"
ark-bn254 = "0.5.0"

rayon = { version = "1.5.2", default-features = false }
derivative = { version = "2", features = ["use_core"] }
itertools = { version = "0.14" }
digest = { version = "0.10.7" }
hashbrown = {version = "0.15" }
num-bigint = { version = "0.4.0", default-features = false }
paste = { version = "1.0" }



[workspace.metadata.release]
dependent-version = "fix"

[profile.release]
opt-level = 3
lto = "thin"
panic = 'abort'
debug = true
# Not stable yet.
# rustflags = ["-C", "target-cpu=native"]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
