[package]
name = "bench-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "^0.5", features = ["parallel"] }
ark-ec = { version = "0.5", features = ["parallel"] }
ark-bls12-381 = { version = "0.5" }
ark-serialize = { version = "0.5" }
ark-std = { version = "0.5", features = ["parallel", "std"] }
scribe = { path = "../scribe-snark" }
mle = { path = "../mle" }
rayon = { version = "^1.5" }
mimalloc = "0.1.47"
jf-relation = { path = "../constraints/relation" }

# HyperPlonk
hp = { git = "https://github.com/EspressoSystems/hyperplonk/", package = "hyperplonk" }
hp-subroutines = { git = "https://github.com/EspressoSystems/hyperplonk/", package = "subroutines" }
ark-bls12-381-04 = { package = "ark-bls12-381", version = "0.4" }
ark-serialize-04 = { package = "ark-serialize", version = "0.4" }

# Gemini
ark-gemini = { git = "https://github.com/pratyush/gemini/", optional = true, features = [ "parallel" ] }
ark-ec-04 = { package = "ark-ec", version = "0.4" }

# Plonky2
plonky2 = { version = "1.0.2", optional = true }
jemallocator = { version = "0.5.0", optional = true }

# Halo2
halo2_proofs = { package = "halo2-axiom", version = "0.5", optional = true, default-features = false, features = [ "batch", "multicore" ] }
group = { version = "0.13", optional = true }
halo2_curves = { package = "halo2curves-axiom", version = "0.7.0", default-features = false, features = ["bits", "derive_serde"], optional = true }


# For iOS
libc = { version = "^0.2.101" }
rlimit = { version = "^0.10" }
fs_extra = "1.3.0"
crossbeam = "0.8.4"

[features]
print-trace = ["scribe/print-trace"]
gemini = ["ark-gemini"]
plonky2 = ["dep:plonky2", "jemallocator"]
halo2 = [ "halo2_proofs", "group", "halo2_curves" ]
asm = [ "ark-ff/asm" ]

[lib]
crate-type = ["staticlib", "rlib"]

[[example]]
name = "scribe-setup"
path = "examples/scribe-setup.rs"

[[example]]
name = "scribe-prover"
path = "examples/scribe-prover.rs"

[[example]]
name = "hp-setup"
path = "examples/hp-setup.rs"

[[example]]
name = "hp-prover"
path = "examples/hp-prover.rs"

[[example]]
name = "gemini-prover"
path = "examples/gemini-prover.rs"
required-features = ["gemini"]

[[example]]
name = "halo2-prover"
path = "examples/halo2-prover.rs"
required-features = ["halo2"]

[[example]]
name = "plonky2-prover"
path = "examples/plonky2-prover.rs"
required-features = ["plonky2"]


[[example]]
name = "witness-synthesis"
path = "examples/witness-synth.rs"

[[example]]
name = "sumcheck"
path = "examples/sumcheck.rs"
