[package]
name = "scribe"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }

derivative = { workspace = true }
rayon = { workspace = true }

scribe-streams = { path = "../streams" }
mle = { path = "../mle" }

merlin = "3.0.0"
smallvec = "1.6"
libc = { version = "0.2.101" }
itertools = { workspace = true }
paste = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
aligned-vec = { version = "0.6.1" }

[dev-dependencies]
tempfile = "3.3.0"
ark-bls12-381 = { workspace = true, default-features = false, features = [ "curve" ] }
criterion = { version = "0.6", default-features = false, features = [ "cargo_bench_support" ]}

[features]
print-trace = [ "ark-std/print-trace" ] 


[[bench]]
name = "sumcheck"
path = "benches/sumcheck.rs"
harness = false
